--- a/style.css
+++ b/style.css
@@ -19,8 +19,34 @@ input{
 #sb:hover{
 background-color:#FFA500;	
 }
-#lg, #psw{
+#lg, #psw{	
 color: #6C7B8B;	
 text-align: center;
 font-size: 16px;	
+}
+.field{
+	position: relative;
+}
+span{
+	position: absolute; 
+	width: 150px;
+	margin-left: 10px;
+	font-size: 18px;
+	color:red;
+	font-style:italic; 
+	background-color: #F5DEB3;
+	border-radius: 10px;
+	padding:2px;
+}
+span.psw_help{
+   visibility: hidden;
+}
+span.lg_help{
+	visibility: hidden;
+}
+div.error{
+	position: relative;
+	color: red;
+	font-size: 17px;
+	visibility: hidden;
 }
